# newcpf_program

./: .gitignore  Dockerfile  Dockerfile copy  LICENSE  README.md  config.toml  cpf_api_v1.py  cpf_config_flat copy.json  cpf_config_flat.json  cpf_config_loader_v2.py  cpf_data.db  cpf_log_file.csv  cpf_logs.json  cpf_logs20250426.json  cpf_logs20250427.json  cpf_logs20250428.json  cpf_logs20250507 copy.json  cpf_logs_parsed.csv  cpf_logs_updated  cpf_logs_updated.json  cpf_report.csv  cpf_simulation.db  environment.yml  log_data.db  logs.json  logs_worker_0.json  logs_worker_1.json  main.py  mynotes.txt  new_config.json  pyproject.toml  requirements copy.txt  requirements.txt  secrets.toml  simulation_output.pkl  test.py  updatedlogs.json  xcpf_logs20250426.json  xx.json
archive/: __init__.py  config copy 2.json  constants.py  cpf_config copy.json  cpf_config_loader_v2.py  cpf_config_loader_v3.py  cpf_date_generator_v2.py  cpf_program1.py  cpf_program2.py  cpf_program3.py  cpf_program4 copy.py  cpf_program_v5 copy 2.py  cpf_program_v5 copy 3.py  cpf_program_v5 copy.py  cpf_program_v6 copy.py  cpf_program_v8.py  cpf_program_v9 copy.py  cpf_reconfigure_date_v2 copy.py  dateutility_copy.py  dateutility_copy_copy.py  import_config copy.py  import_config_copy.py  reconfigure_date.py  run_cpf_simulation copy.py  run_cpf_simulation_v2.py  run_cpf_simulation_v3.py  run_cpf_simulation_v4.py  run_cpf_simulation_v5.py  run_cpf_simulation_v6.py  run_cpf_simulation_v6_copy.py  run_cpf_simulation_v7 copy.py  screens..py  test2.py  testupload.py  xcpf_program.py  xcpf_program_v8.py  xxcpf_program_v6.py  (+1 more)
(+108 files in other folders)
