[project]
name = "newcpf-program"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dicttoxml>=1.7.16",
    "jmespath",
    "pydantic>=2.11.4",
    "python-dateutil>=2.9.0.post0",
    "ruff>=0.11.8",
    "tqdm>=4.67.1",
]

[server]
headless = true
port = 8501
enableCORS = false
enableXsrfProtection = false
enableWebsocketCompression = false

[browser]
gatherUsageStats = false
